# llm-mcp-hub

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.gemini-test  GEMINI.md  README.md  docker-compose.redis.yml  docker-compose.yml  pyproject.toml
docs/: API.md  PRD.md  SERVICE_PLAN.md  azure-cloud-container.md  예상_비용_비교.md  토큰생성방법.md
src/llm_mcp_hub/: __init__.py  main.py  pyproject.toml
src/llm_mcp_hub/api/v1/: __init__.py  chat.py  dependencies.py  health.py  providers.py  router.py  schemas.py  sessions.py
src/llm_mcp_hub/core/: __init__.py  config.py  exceptions.py  secrets.py
src/llm_mcp_hub/domain/: __init__.py  message.py  session.py
src/llm_mcp_hub/infrastructure/: __init__.py
src/llm_mcp_hub/infrastructure/providers/: __init__.py  base.py  claude.py  gemini.py
src/llm_mcp_hub/infrastructure/session/: __init__.py  base.py  memory.py  redis.py
src/llm_mcp_hub/services/: __init__.py  chat.py  memory.py  session.py
src/llm_mcp_hub_web/: .gitignore  ARCHITECTURE.md  PRD.md  components.json  package-lock.json  package.json
src/llm_mcp_hub_web/app/: layout.tsx  page.tsx
src/llm_mcp_hub_web/app/chat/: page.tsx
src/llm_mcp_hub_web/app/providers/: page.tsx
src/llm_mcp_hub_web/app/sessions/: page.tsx
src/llm_mcp_hub_web/components/: providers.tsx
src/llm_mcp_hub_web/types/: chat.ts  health.ts  index.ts  provider.ts  session.ts
tests/: conftest.py  test_core.py  test_domain.py  test_session_store.py
tests/api/: test_chat.py  test_health.py  test_providers.py  test_sessions.py
tests/poc/: test_claude_sdk.py  test_gemini_pty.py
(+27 files in other folders)
