[project]
name = "llm-mcp-hub"
version = "0.1.0"
description = "Multi-LLM Hub API with MCP Server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "claude-code-sdk>=0.0.20",
    "ptyprocess>=0.7.0",
    "redis>=5.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_mcp_hub"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
